# aurum

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  reputation-deploy.json
api/: .env.example  .gitignore  main.py  requirements.txt  start_api.sh  validation.py
api/agents/: attestation_agent.py  credit_agent.py  fraud_agent.py  lending_agent.py  monitoring_agent.py  risk_agent.py
api/casper/: __init__.py  client.py  contracts.py  deploy_submitter.py  x402.py
api/cspr_cloud/: __init__.py  defi.py  wallet.py
api/db/: supabase.py
api/docs/: AGENT_PIPELINE  INTEGRATION_CHANGELOG.md  TODO  WORKFLOW
api/pipeline/: graph.py  state.py
api/routers/: assess.py  cron.py  oracle.py
api/scoring/: model.py  shap_explain.py
api/test_scripts/: test_agents.py  test_contract_integration.py  test_credit_agent_live.py  test_e2e.py  (+8 more)
contracts/: Cargo.toml  Odra.toml
contracts/.cargo/: config.toml
contracts/compliance_registry/: Cargo.toml
contracts/compliance_registry/src/: lib.rs
contracts/credit_registry/: Cargo.toml
contracts/credit_registry/src/: lib.rs
contracts/odra/: Cargo.toml
contracts/odra/src/: lib.rs
contracts/odra/tests/: odra_wrappers.rs
contracts/oracle_paywall/: Cargo.toml
contracts/oracle_paywall/src/: lib.rs
contracts/reputation_registry/: Cargo.toml
contracts/reputation_registry/src/: lib.rs
contracts/wasm/: ComplianceRegistry.wasm  CreditRegistry.wasm  OraclePaywall.wasm  ReputationRegistry.wasm
scripts/: check-dev2-env.sh  deploy-contracts.sh  verify-contracts.sh
web/: package-lock.json  package.json  pnpm-lock.yaml
(+61 files in other folders)
