[workspace]
members = [
    "credit_registry",
    "compliance_registry",
    "oracle_paywall",
    "reputation_registry",
    "odra",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
thiserror = "1.0"
odra = "2.8.1"
odra-build = "2.8.1"
odra-vm = "2.8.1"
